--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node",
             "request": "launch",
             "name": "启动程序",
-            "program": "${workspaceFolder}/1.js"
+            "program": "${workspaceFolder}/bocai/2.js"
         }
     ]
 }
